Improve multi-types aggregations